kubernetes/nfr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfr
  labels:
    environment: nfr
