kubernetes/nfr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nfr-ingress
  namespace: nfr
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: nfr.app.company.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 80
